# rknn_demo

./: CMakeLists.txt  README.md  libjpeg.so.8  rknn_camera.c
FR/: Makefile  Readme.txt  lfwTest  testscript  wfFRTest  wfFRTestSample
FR/Samplecode/: dualcamSpoof.cpp  singlecamSpoof.cpp  testAuEnroll.cpp  testAuRecognize.cpp  testIDCheck.cpp  testPCEnroll.cpp  testSdkCompile.cpp  testSdkStateMachine.cpp
FR/include/: FRLibraryTypes.h
common/: buffer.h  rknn_msg.c  rknn_msg.h  v4l2camera.c  yuv.c
include/: FRLibrary.h  FRLibraryID.h  FRLibraryPC.h
minigui/: MiniGUI-480x854.cfg  MiniGUI-720x1280.cfg
rknn/ssd/ssd_1808/: ssd.c  ssd.h
ui/ssd/: ssd_ui.c
